<resources>
    <string name="app_name">妙定</string>
    <string name="content_description_item_custom_image">image</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="action_settings">Settings</string>
    <string name="check_update">检查更新</string>
    <string name="new_version">有新版本！</string>
    <string name="company_name">杭州云工场科技有限公司</string>
    <string name="consignee">收货人：</string>
    <string name="input_name">请输入姓名</string>
    <string name="contact_number">联系电话：</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="current_region">所在地区：</string>
    <string name="address">省/市/区</string>
    <string name="street">街道：</string>
    <string name="detail_address">请填写详细地址</string>
    <string name="set_default_address">设为默认</string>
    <string name="save_address">保存地址</string>
    <string name="input_infomation">输入基本信息</string>
    <string name="measure_info">为了确保衣服合身，请准确输入您的净身高、净体重</string>
    <string name="nickname">姓名</string>
    <string name="net_height">净身高</string>
    <string name="net_weight">净体重</string>
    <string name="take_picture_measure">拍照量体</string>
    <string name="take_picture_info">若不方便拍照量体可稍后与客服确认形体数据</string>
    <string name="help">帮助</string>
    <string name="measure_intro">系统会自动对图像脸部进行模糊处理</string>
    <string name="save">保存</string>
    <string name="apply_alter">申请修改</string>
    <string name="after_sale_progress">售后进度</string>
    <string name="after_sale_service">售后客服</string>
    <string name="personal_information">个人信息</string>
    <string name="designer_name">姓 名：</string>
    <string name="input_real_name">请输入您的真实姓名</string>
    <string name="phone_number">手 机 号：</string>
    <string name="input_your_phone_number">请输入您的手机号码</string>
    <string name="wechat_number">微 信 号：</string>
    <string name="input_wechat_number">请输入您的微信号</string>
    <string name="contact_email">联系邮箱：</string>
    <string name="input_contact_email">请输入您的常用邮箱</string>
    <string name="work_information">作品信息</string>
    <string name="upload_work_picture">请上传一组您的作品图片(建议3-4张)</string>
    <string name="upload_studio_picture">请上传一组本人在工作室的图片(建议1-2张)</string>
    <string name="submit">提交</string>
    <string name="make_an_appointment">立即预约</string>
    <string name="return_homepage">返回首页</string>
    <string name="view_order">查看订单</string>
    <string name="take_again">重拍</string>
    <string name="next_step">下一步</string>
    <string name="base_information">基本信息</string>
    <string name="measure_name">姓 名：</string>
    <string name="input_measure_name">请输入您的真实姓名</string>
    <string name="measure_height">身 高：</string>
    <string name="input_measure_height">请输入您的净身高</string>
    <string name="measure_weight">体 重：</string>
    <string name="input_measure_weight">请输入您的净体重</string>
    <string name="optional_info">选填信息</string>
    <string name="stroe_number">店铺号：</string>
    <string name="input_bust">胸 围：</string>
    <string name="input_waist">腰 围：</string>
    <string name="input_hipline">臀 围：</string>
    <string name="take_picture_immediately">立即拍照</string>
    <string name="submit_apply">提交申请</string>
    <string name="service_accept">客服受理</string>
    <string name="send_goods">寄回商品</string>
    <string name="factory_accept">工厂受理</string>
    <string name="finish_alter">完成修改</string>
    <string name="select_alter_goods">请选择要修改的商品</string>
    <string name="alter_order_info">请输入文字描述，300字以内</string>
    <string name="upload_picture">上传照片(最多4张)</string>
    <string name="contact_phone">联系方式</string>
    <string name="order_phone_number">手机号</string>
    <string name="apply_success">申请成功</string>
    <string name="apply_result">您的申请已提交成功，请等待客服受理 如有疑问，可联系在线客服</string>
    <string name="come_back">返回</string>
    <string name="add_address">请创建收货地址</string>
    <string name="confirm_measure_data">量体数据确认</string>
    <string name="confirm_order_name">姓名：</string>
    <string name="confirm_order_height">身高：</string>
    <string name="confirm_order_weight">体重：</string>
    <string name="please_select_coupon">请选择优惠券</string>
    <string name="gift_card_money">礼品卡余额（）</string>
    <string name="goods_total_money">商品合计：</string>
    <string name="freight">运费：</string>
    <string name="discount_money">优惠：</string>
    <string name="total_money">总计：</string>
    <string name="pay_money">支 付</string>
    <string name="input_exchange_code">请输入兑换码</string>
    <string name="exchange">兑换</string>
    <string name="no_more_coupon">没有更多优惠券了 | 查看无效券 ＞＞</string>
    <string name="goods_detail">-- 继续拖动，查看商品描述 --</string>
    <string name="buy_same_style">购买同款</string>
    <string name="buy">购 买</string>
    <string name="fabric">面料</string>
    <string name="type">版型</string>
    <string name="details">细节</string>
    <string name="positive">正面</string>
    <string name="back">背面</string>
    <string name="inside">里子</string>
    <string name="subtotal">小计：</string>
    <string name="buy_immediately">立即购买</string>
    <string name="no_address">您还没有收货地址</string>
    <string name="add_receive_address">新增地址</string>
    <string name="test_age">年龄：</string>
    <string name="fast_customize">快速定制</string>
    <string name="personal_customize">个性定制</string>
    <string name="measur_explain">系统会自动对图像脸部进行模糊处理</string>
    <string name="select_type">选择版型</string>
    <string name="select_fabric">选择面料 (长按显示大图)</string>
    <string name="select_embroider">选择刺绣</string>
    <string name="select_embroider_position">选择刺绣位置</string>
    <string name="select_font_color">选择字体颜色</string>
    <string name="slelect_font">选择字体</string>
    <string name="select_embroider_content">绣花内容</string>
    <string name="input_embroider_content">请输入绣花内容(不超过12个字符)</string>
    <string name="input_code">请输入验证码</string>
    <string name="receive_code">获取验证码</string>
    <string name="into_app">进入妙定</string>
    <string name="logistics_no">物流单号：</string>
    <string name="logistics_company">物流公司：</string>
    <string name="add_measure_data">新增量体数据</string>
    <string name="member_growth">我目前的成长值：</string>
    <string name="no_growth_recod">暂无成长记录~</string>
    <string name="no_related_msg">暂无相关消息~</string>
    <string name="order_time">下单时间：</string>
    <string name="pay_time">付款时间：</string>
    <string name="receive_address">地 址：</string>
    <string name="pay_type">支付方式：</string>
    <string name="goods_discount">优 惠：</string>
    <string name="goods_pay_money">实 付：</string>
    <string name="order_no">订单编号：</string>
    <string name="scan_code">请将二维码放置识别框中</string>
    <string name="input_coupon_code">请输入邀请码、兑换码</string>
    <string name="coupon_disable">以下优惠券不适用此订单</string>
    <string name="not_use_coupon">不使用优惠券</string>
    <string name="avatar">头像</string>
    <string name="other_name">昵称</string>
    <string name="age">年龄</string>
    <string name="measure_data">量体数据</string>
    <string name="receive_goods_address">收货地址</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feed_back">帮助与反馈</string>
    <string name="about_app">关于妙定</string>
    <string name="logout">退出登录</string>
    <string name="select_all">全选</string>
    <string name="place_order">下单</string>
    <string name="view_goods">去逛逛</string>
    <string name="recommend_goods">为您推荐</string>
    <string name="focus_store">关注店铺</string>
    <string name="buy_product">购买产品</string>
    <string name="input_store_name">输入定制店名称、关键词</string>
    <string name="order_money">订单金额(元)</string>
    <string name="hint_order_money">咨询店内人员后输入</string>
    <string name="store_discount">店铺优惠 (满100减20)</string>
    <string name="coupon">优惠券</string>
    <string name="actual_money">实付金额</string>
    <string name="stroe_confirm_buy">已和店员确认，立即购买</string>
    <string name="common_question">常见问题</string>
    <string name="hotline">客服热线</string>
    <string name="online_service">在线客服</string>
    <string name="suggestions">意见反馈</string>
    <string name="evaluate">评价</string>
    <string name="view_whole">查看全部 ></string>
    <string name="view_works_detail">上滑查看商品详情</string>
    <string name="add_cart">加入购物袋</string>
    <string name="accent">好物</string>
    <string name="no_more_data">我也是有底线的</string>
    <string name="designer_works">设计师作品</string>
    <string name="more">更多＞</string>
    <string name="designer_introduce">设计师简介</string>
    <string name="current_address">地址:</string>
    <string name="default_address">默认</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="please_wait">请耐心等待（如有疑问，请联系客服）</string>
    <string name="dear_member">亲爱的用户：</string>
    <string name="actual_pay">实付：</string>
    <string name="view_detail">查看详情</string>
    <string name="add_gift_card">添加礼品卡</string>
    <string name="input_pwd">密钥</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="pay_order_type">支付方式</string>
    <string name="confirm_pay">确认付款</string>
    <string name="total_price">合计：</string>
    <string name="rights_explain">特权说明</string>
    <string name="size">尺码</string>
    <string name="color">颜色</string>
    <string name="num">数量</string>
    <string name="send_again">重发</string>
    <string name="current_version">当前版本：</string>
    <string name="user_aggrement">用户协议</string>
    <string name="error_phone_number">手机号输入有误，请重新输入</string>
    <string name="edit_address">编辑地址</string>
    <string name="beijing">北京市</string>
    <string name="chaoyang">朝阳区</string>
    <string name="input_personal_info">请完善个人信息</string>
    <string name="add_success">添加成功</string>
    <string name="edit_success">修改成功</string>
    <string name="please_input_phone_number">请输入11位手机号码</string>
    <string name="insert_measure_data">添加量体数据</string>
    <string name="upload_measure_data">上传量体数据</string>
    <string name="to_take_picture">去拍照</string>
    <string name="no_need">不用了</string>
    <string name="no_measure_photo">您尚未完善量体照片，是否去拍照？</string>
    <string name="camera">相机</string>
    <string name="after_sale">售后服务</string>
    <string name="all_evaluation">全部评价</string>
    <string name="apply_join">申请入驻</string>
    <string name="please_input_personal_information">请按要求填写个人信息</string>
    <string name="order_measure">预约量体</string>
    <string name="search_condition">请输入查询条件</string>
    <string name="please_input_address">请输入地址</string>
    <string name="location">定位</string>
    <string name="appointment_detail">预约详情</string>
    <string name="state_appoint_success">当前状态：预约成功，等待客服受理</string>
    <string name="state_measure_time">当前状态：派单成功，等待上门量体\n上门时间：</string>
    <string name="state_cancel">当前状态：已取消</string>
    <string name="apply_detail">申请详情</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="order_share_title">【妙定APP】送你1000元定制红包，手快有，手慢无！</string>
    <string name="order_share_content">做你不敢想的黑科技服饰定制，雅痞还是绅士，成熟还是睿智，先从一件衬衣开始。</string>
    <string name="user_info">用户信息</string>
    <string name="please_input_common_info">请完善基本信息</string>
    <string name="customize_type">定制款</string>
    <string name="service_hotline">客服热线：</string>
    <string name="input_card_no">卡号</string>
    <string name="homepage_tab">首页</string>
    <string name="customize_tab">定制</string>
    <string name="me">我</string>
</resources>