<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:fitsSystemWindows="true">

    <RadioGroup
        android:id="@+id/rgs_main_tab"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            style="@style/RadioButton"
            android:drawableTop="@drawable/selector_homepage_tab"
            android:text="@string/homepage_tab"/>

        <RadioButton
            style="@style/RadioButton"
            android:drawableTop="@drawable/selector_customize_tab"
            android:text="@string/customize_tab"/>

        <RadioButton
            style="@style/RadioButton"
            android:drawableTop="@drawable/selector_works_tab"
            android:text="@string/accent"/>

        <RadioButton
            style="@style/RadioButton"
            android:drawableTop="@drawable/selector_me_tab"
            android:text="@string/me"/>
    </RadioGroup>

    <View
        android:id="@+id/view_main_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/rgs_main_tab"
        android:background="@color/light_gray_ed"/>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_main_line"
        android:background="@android:color/white"/>

    <include
        layout="@layout/loading_error"/>

</RelativeLayout>