<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include
        layout="@layout/widget_header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/consignee"
            android:textColor="@color/dark_gray_22"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_name"
            android:singleLine="true"
            android:maxLength="15"
            android:textColor="@color/dark_gray_22"
            android:textColorHint="@color/hint_gray"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_e5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView

            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:text="@string/contact_number"
            android:textColor="@color/dark_gray_22"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_add_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/dark_gray_22"
            android:textColorHint="@color/hint_gray"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_e5"/>

    <LinearLayout
        android:id="@+id/ll_receive_address"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/current_region"
            android:textColor="@color/dark_gray_22"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_receive_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/address"
            android:textColor="@color/dark_gray_22"
            android:textColorHint="@color/hint_gray"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:src="@mipmap/icon_more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_e5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/street"
            android:textColor="@color/dark_gray_22"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_detailed_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/detail_address"
            android:maxLength="20"
            android:maxLines="2"
            android:textColor="@color/dark_gray_22"
            android:textColorHint="@color/hint_gray"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/default_address"
            android:textColor="@color/dark_gray_22"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/switch_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_black_bg"
        android:gravity="center"
        android:text="@string/save_address"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>


</LinearLayout>