<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_white_4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/add_gift_card"
            android:textColor="@color/light_gray_3d"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/text_white_4dp"
            android:gravity="center_vertical"
            android:hint="@string/input_card_no"
            android:maxLength="20"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/light_gray_3d"
            android:textColorHint="@color/hint_gray"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_card_pwd"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_white_4dp"
            android:gravity="center_vertical"
            android:hint="@string/input_pwd"
            android:maxLength="20"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/light_gray_3d"
            android:textColorHint="@color/hint_gray"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/line_gray_e5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/light_gray_3d"
                android:textSize="16sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line_gray_e5"/>

            <TextView
                android:id="@+id/tv_confirm_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/light_gray_3d"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>