<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:fitsSystemWindows="true">

    <include
        layout="@layout/widget_header_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:maxLength="6"
                android:text="@string/personal_information"
                android:textColor="@color/dark_gray_22"
                android:textSize="17.8sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/designer_name"
                    android:textColor="@color/dark_gray_22"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_apply_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_real_name"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:textColor="@color/dark_gray_22"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/app_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/dark_gray_22"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_apply_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_your_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray_22"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/app_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wechat_number"
                    android:textColor="@color/dark_gray_22"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_apply_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_wechat_number"
                    android:singleLine="true"
                    android:maxLength="17"
                    android:textColor="@color/dark_gray_22"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/app_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email"
                    android:textColor="@color/dark_gray_22"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_apply_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_contact_email"
                    android:singleLine="true"
                    android:maxLength="17"
                    android:textColor="@color/dark_gray_22"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5px"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/app_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/work_information"
                android:textColor="@color/dark_gray_22"
                android:textSize="17.8sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/upload_work_picture"
                android:textColor="@color/dark_gray_22"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_apply_works"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_add_picture"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_apply_works"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/upload_studio_picture"
                android:textColor="@color/dark_gray_22"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_apply_company"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_add_picture"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_apply_company"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_submit_apply"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_black_bg"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/loading_view"/>


</RelativeLayout>